tests/basic/check/not_iff/160.pan.out
tests/basic/check/not_iff/160.pan:5:1-5: error: cannot solve constraints of f160
tests/basic/check/not_iff/160.pan:8:1-5: error: cannot solve constraints of f161