tests/basic/check/not_iff/160.pan
not : (x:bool) -> {y:bool|y = true <=> x = false}
assert : { b:ð”¹ | b = true } â†’ ðŸ™

f160 : {b:bool|b=true} -> unit
f160 = \b:bool. let c = not b in assert c

f161 : {b:bool|true} -> unit
f161 = \b:bool. let c = not b in assert c
